			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04r: *********************************

IMP/MAN: (6/14/06, GVG) Added extra flag in GDS import user preferences to have option
to simplify via contacts (for BIC). Only available in debug mode.

IMP/MAN: (6/14/06, SMR) Can now drag cells or cell groups from the explorer
     tree to another library in the tree, which does a cross-library copy (Bug #630).

IMP/MAN: (6/14/06, GVG) Changes in GeneralTab/IO/FileTypeGroup dialog to accomodate
resetting of default values. These changes cover Bugzilla #397 and #1021.

IMP/MAN: (6/13/06, GVG) DRC and AFG exclusion layers available in LayerTab

BUG: (6/13/06, GVG) Search and replace "objects to search" persistence (Bug 1127)
FIX: lastSearch clear anytime the toggles are changed.

IMP: (6/13/06, SMR) Spline editing in outline mode shows the adjusted spline (Bug #165).

BUG: (6/13/06, SMR) Window scale not restored after "up hierarchy" (Bug #1099).
FIX: In ExplorerTree.editCellAction(), always call setCellWindow().

BUG: (6/13/06, SMR) Duplicating circuitry crashes (Bug #1120).
FIX: In Clipboard.java, the "down in place" transform was not being used properly.

IMP: (6/13/06, GVG) Ability to abort Mimic Stitch job.

IMP/MAN: (6/13/06, GVG) Changes related to groups associated to different file types to
be able to store different paths depending on tools/features.

IMP: (6/12/06, RK) Add nand2LTen and nand2HTen to MOCMOS gate generator. (Bugzilla# 1119)

BUG: (6/12/06, SMR) Adding busses to the waveform window shows the signals
     in random order (Bug #1113).
FIX: In WaveformWindow.findSelectedSignals(), sort the selected signals by name.

BUG: (6/12/06, SMR) "Back" button doesn't ascend schematic hierarchy (Bug #1112)
FIX: In EditWindow.downHierarchy() record the schematic cell in addToHistory().

BUG: (6/12/06, SMR) Multi-object properties crashes (Bug #1106).